# ble-sdk10-da1459x-examples

./: .codespellignore  .csconfig  .pre-commit-config.yaml  LICENSE.txt  README.md
connectivity/ble_custom_service_example/: .cproject  CMakeLists.txt  Readme.md  ble_peripheral_task.c  main.c
connectivity/ble_custom_service_example/config/: custom_config_eflash.h  custom_config_eflash_suota.h
connectivity/ble_custom_service_example/custom_service_framework/: CMakeLists.txt
connectivity/ble_custom_service_example/custom_service_framework/include/: ble_custom_service.h
connectivity/ble_custom_service_example/custom_service_framework/src/: CMakeLists.txt  ble_custom_service.c
features/cmsis_nn_sample_code/: .cproject  CMakeLists.txt  Readme.md  main.c
features/cmsis_nn_sample_code/config/: custom_config_eflash.h
features/cmsis_nn_sample_code/nnlib/: CMakeLists.txt
features/cmsis_nn_sample_code/nnlib/Include/: arm_math_types.h  arm_nn_math_types.h  arm_nnfunctions.h
helpers/armv8_fault_handling_example/: .cproject  CMakeLists.txt  Readme.md  fault_handling_task.c  main.c
helpers/armv8_fault_handling_example/config/: custom_config_eflash.h
helpers/armv8_fault_handling_example/fault_handling/: CMakeLists.txt  user_application.h
helpers/armv8_fault_handling_example/fault_handling/include/: fault_handling.h
helpers/armv8_fault_handling_example/fault_handling/src/: BusFault_handler.c  BusFault_handler_asm.S  CMakeLists.txt  HardFault_handler.c  MemManage_handler.c  MemManage_handler_asm.S  (+3 more)
helpers/armv8_fault_handling_example/misc/: misc.h
(+266 files in other folders)
